<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/whrite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp">
    <LinearLayout
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/luong_chat_can_thiet"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/t1"
                android:layout_width="@dimen/sizetxt"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="0.5"
                android:text="@string/protein"
                android:textSize="18sp" />

            <EditText

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="20dp"

            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/t2"
                android:layout_width="@dimen/sizetxt"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="0.5"
                android:text="@string/tinh_bot"
                android:textSize="18sp" />
            <EditText
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="20dp"
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/t3"
                android:layout_width="@dimen/sizetxt"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="0.5"
                android:text="@string/chat_beo"
                android:textSize="18sp" />
            <EditText
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="20dp"
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/t4"
                android:layout_width="@dimen/sizetxt"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="0.5"
                android:text="@string/vitamin"
                android:textSize="18sp" />
            <EditText
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="20dp"
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/t5"
                android:layout_width="@dimen/sizetxt"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="0.5"
                android:text="@string/chat_xo"
                android:textSize="18sp" />
            <EditText
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Can Bang Dinh Duong"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button

        android:background="@color/colorPrimary"
        android:text="Next"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>